@startuml LoadoutUI

skinparam classAttributeIconSize 0
hide empty fields
hide empty methods

class LoadoutSelector <<View>> {
  + initialize( . . . )

}

interface GameController <<Controller>> {
  + setWhiteLoadout(loadout : Loadout)
  + setBlackLoadout(loadout : Loadout)
}

interface GameCoordinator <<Controller>> {
  + initGame()
  + showMainMenu()
}

class LoadoutManager <<Model>> {
  + getAvailableLoadouts() : Set<Loadout>
  + saveLoadout(loadout : Loadout)
}

LoadoutSelector o-- GameController
LoadoutSelector o-- GameCoordinator
LoadoutSelector o-- LoadoutManager : reads >

class LoadoutEditor <<View>> {
  + initialize( . . . )
}

interface LoaderController <<Interface>> {
  + getEntityCache() : Map<...>
}

LoadoutEditor o-- GameCoordinator
LoadoutEditor o-- LoaderController : reads definitions >
LoadoutEditor o-- LoadoutManager : saves/loads >

@enduml